@@ -148,6 +148,7 @@ following names for their contribution to the product.
 * Stefano Codari
 * Str4nd
 * svip
+* The Evil IP address
 * Tisane
 * Tobias Müller
 * Umherirrender
